<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/audio_category">
        <org.nusantara.project.parts.preferences.CustomSeekBarPreference
            android:defaultValue="2"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain"/>

        <org.nusantara.project.parts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display_category">
        <org.nusantara.project.parts.preferences.SecureSettingSwitchPreference
            android:key="backlight_dimmer"
            android:icon="@drawable/ic_backlight"
            android:title="@string/backlight_dimmer"
            android:summary="@string/backlight_summary" />

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/device_kcal_summary" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.nusantara.project.parts.kcal.KcalSettingsActivity"
                android:targetPackage="org.nusantara.project.parts.kcal"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="selinux"
        android:title="@string/selinux_category">

        <Preference
            android:key="selinux_explanation"
            android:summary="@string/selinux_explanation_summary"
            android:selectable="false"/>

        <SwitchPreference
            android:key="selinux_mode"
            android:icon="@drawable/ic_selinux"
            android:title="@string/selinux_mode_title"
            android:summaryOn="@string/selinux_enforcing_summary"
            android:summaryOff="@string/selinux_permissive_summary" />

        <SwitchPreference
            android:key="selinux_persistence"
            android:icon="@drawable/ic_selinux_persistence"
            android:title="@string/selinux_persistence_title"
            android:summary="@string/selinux_persistence_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory 
        android:key="torch"
        android:title="@string/torch_category">

        <org.nusantara.project.parts.preferences.CustomSeekBarPreference
            android:defaultValue="100"
            android:key="yellow_torch_brightness"
            android:max="100"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_yellow_brightness_title" />

        <org.nusantara.project.parts.preferences.CustomSeekBarPreference
            android:defaultValue="100"
            android:key="white_torch_brightness"
            android:max="100"
            app:min="0"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_white_brightness_title" />
    </PreferenceCategory>

    <PreferenceCategory 
        android:key="vtg"
        android:title="@string/vibration_category">

        <org.nusantara.project.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="13"
            android:key="vibration_system"
            android:max="100"
            android:title="@string/vibration_system_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>

        <org.nusantara.project.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="100"
            android:key="vibration_notification"
            android:max="100"
            android:title="@string/vibration_notification_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/> 

         <org.nusantara.project.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="100"
            android:key="vibration_call"
            android:max="100"
            android:title="@string/vibration_call_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>

    </PreferenceCategory>
</PreferenceScreen>
